--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "tap" : "0.4.0",
-    "libxmljs" : "0.7.0"
+    "libxmljs" : "^0.15.0"
   },
   "scripts": {
     "test": "node test/index.test.js"
